--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -1,6 +1,6 @@
 body {
 	/*text-align: center;*/
-	background: url("//i57.tinypic.com/2uhsu1v.jpg");
+	background: url("http://i57.tinypic.com/2uhsu1v.jpg");
 	background-size: cover;
 	background-position: center center;
 	background-repeat: no-repeat;
