--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -1,30 +1,38 @@
 @import url('https://fonts.googleapis.com/css?family=Crushed');
 body {
-	/*text-align: center;*/
 	background: url("http://i57.tinypic.com/2uhsu1v.jpg") !important;
 	background-size: cover !important;
 	background-position: center center !important;
 	background-repeat: no-repeat !important;
 	background-attachment: fixed !important;
-	font: normal 13px 'Lucida Sans', sans-serif !important;
+	font-family:' Lucida Sans', sans-serif !important;
+	font-size: 14px;
 }
 a {
-	-webkit-transition: all .4s ease-in-out;
-	-moz-transition: all .4s ease-in-out;
 	-o-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
 	-ms-transition: all .4s ease-in-out;
+	-webkit-transition: all .4s ease-in-out;
 	transition: all .4s ease-in-out;
 }
 .maincontainer {
-	background: rgba(255,255,255,.4);
-	width: 100%;
+	background-color: rgba(255,255,255,.4);
 	height: 410px;
 	overflow: auto;
 	padding: 0 10px;
+	width: 100%;
 }
-.h2title {
-	font-family: 'Lucida Sans', sans-serif;
-	font-size: 24px;
+.headtitle {
 	color: #fff;
-	line-height: 16px;
+	font-family: 'Lucida Sans', sans-serif;
+	font-size: 26px;
+}
+.head3, .h3post {
+	color: white;
+	font-family:'Crushed', cursive;
+	font-size: 20px;
+}
+.metadesc {
+	color: white;
+	font-family: 'Lucida Sans', sans-serif;
 }
