--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -17,6 +17,9 @@ a {
 }
 .maincontainer {
 	background-color: rgba(255,255,255,.4);
+    border: 1px #ccc solid;
+    border-radius: 0 0 10px 10px;
+	box-shadow: inset -1em 10em 10em 0px rgba(255, 255, 255,.4)
 	height: 410px;
 	overflow: auto;
 	padding: 0 10px;
@@ -37,5 +40,7 @@ a {
 }
 .metadesc {
 	color: #fff;
-	font-family: 'Lucida Sans', sans-serif;
+	font-family: 'Crushed', cursive;
+	margin: -25px 50px 80px;
+	padding: 0.2em;
 }
