--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -19,7 +19,7 @@ a {
 	background-color: rgba(255,255,255,.4);
     border: 1px #ccc solid;
     border-radius: 0 0 10px 10px;
-	box-shadow: inset -1em 10em 10em 0px rgba(255, 255, 255,.4)
+	box-shadow: inset -1em 10em 10em 0px rgba(255, 255, 255,.4);
 	height: 410px;
 	overflow: auto;
 	padding: 0 10px;
@@ -37,6 +37,8 @@ a {
 	color: #fff;
 	font-family:'Crushed', cursive;
 	font-size: 24px;
+	padding: 3px 20px;
+	margin: 10px auto;
 }
 .metadesc {
 	color: #fff;
