--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -15,12 +15,21 @@ a {
 	-webkit-transition: all .4s ease-in-out;
 	transition: all .4s ease-in-out;
 }
+nav{
+	font-family: 'Crushed', cursive;
+	font-size: 32px;
+	max-width: 800px;
+}
+.navbar{
+	margin-bottom: 0px;
+}
 .maincontainer {
 	background-color: rgba(255,255,255,.4);
     border: 1px #ccc solid;
     border-radius: 0 0 10px 10px;
 	box-shadow: inset -1em 10em 10em 0px rgba(255, 255, 255,.4);
-	height: 410px;
+	max-height: 410px;
+	max-width: 800px;
 	overflow: auto;
 	padding: 0 10px;
 	width: 100%;
