--- a/assets/alicetrap.css
+++ b/assets/alicetrap.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Crushed');
+@import url('https://fonts.googleapis.com/css?family=Crushed|Roboto|Open+Sans');
 body {
-    background: url("http://i57.tinypic.com/2uhsu1v.jpg");
+    background-attachment: fixed;
+    background-image: url("http://i57.tinypic.com/2uhsu1v.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    color: #CCC;
     font-family: 'Open Sans', sans-serif;
 }
 a {
@@ -32,9 +33,15 @@ ul {
 }
 /* semitransparent container */
 .container-st {
-    background-color: rgba(255, 255, 255, .4);
+    background-color: rgba(0, 0, 0, .6);
     padding: 10px;
     max-width: auto;
+    border: 1px #333 solid;
+    border-radius: 5px;
+    box-shadow: inset -.1em .1em 1em .1em rgba(0, 0, 0, .4);
+    letter-spacing: .1;
+    overflow: auto;
+    letter-spacing: .1em;
 }
 .head {
     font: normal 12px 'Open Sans', sans-serif;
